layout bug fixed

--- a/css/index.less
+++ b/css/index.less
@@ -1,3 +1,13 @@
+/* #fullpage {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+} */
+h1 {
+    margin-top:0;
+}
+
 #menu{
     position:fixed;
 	top:0;
@@ -227,6 +237,7 @@
 
     .secondPage {
         width: 100%;
+        height: 100%;
         position: relative;
         h1 {
             font-size: 3.5rem;
