--- a/css/main.css
+++ b/css/main.css
@@ -115,9 +115,6 @@ textarea {
         visibility: hidden;
     }
 
-html {
-    font-size: 100%;
-}
 
 
 
